objects/AcctSeed__Bank_Account__c/AcctSeed__Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Bank Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>