objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account_Type__c</fullName>
    <inlineHelpText>Required if this is a bank account enrolled in Payment Services.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>