objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Address__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the bank&apos;s address.</inlineHelpText>
    <label>Address</label>
    <referenceTo>AcctSeed__Address__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>