objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Bank_Fraction__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Fraction__c</fullName>
    <label>Bank Fraction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>