objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Default_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Bank_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to make this the default bank account.</inlineHelpText>
    <label>Default Bank Account</label>
    <type>Checkbox</type>
</CustomField>