objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Enable_for_Payment_Services__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Enable_for_Payment_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to enable this bank account in Payment Services.</inlineHelpText>
    <label>Enable for Payment Services</label>
    <type>Checkbox</type>
</CustomField>