objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Payment_Services_Bank_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Bank_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Payment Services Bank Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>