objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Payment_Services_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Enrollment_Status__c</fullName>
    <inlineHelpText>Indicates enrollment status in Payment Services.</inlineHelpText>
    <label>Payment Services Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Enrolled</fullName>
                <default>true</default>
                <label>Not Enrolled</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>