objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Payor_Email__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payor_Email__c</fullName>
    <label>Payor Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>