objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Payor_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payor_Name__c</fullName>
    <label>Payor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>