objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Routing_Number__c</fullName>
    <inlineHelpText>Required if this is a bank account enrolled in Payment Services.</inlineHelpText>
    <label>Routing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>