objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Signature_Block_2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Signature_Block_2__c</fullName>
    <label>Signature Block 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>