objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Signature_Block__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Signature_Block__c</fullName>
    <label>Signature Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>