objects/AcctSeed__Bank_Account__c/fields/AcctSeed__Signature_Threshold__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Signature_Threshold__c</fullName>
    <inlineHelpText>Enter the max threshold amount where a second signature would be required.</inlineHelpText>
    <label>Signature Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>